# dev-pipe

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: deploy-docs.yml
blog/: _quarto.yml  index.qmd
blog/posts/biomechanical-analysis/: index.qmd
blog/posts/hand-finder/: index.qmd
blog/posts/normalization/: index.qmd
blog/posts/swing-detection/: index.qmd
blog/posts/welcome/: index.qmd
docs/: package-lock.json  vite.config.js
docs/.github/workflows/: publish.yml
docs/public/data/: refinement_data.json
docs/src/: App.jsx
docs/src/pages/: Analysis.jsx  DataFormats.jsx  DeployCosts.jsx  LabelVideos.jsx  LibraryAPI.jsx  Overview.jsx  PipelineFlow.jsx  RefinementExplorer.jsx  ScoreHandComparison.jsx  SwingDetection.jsx
eagle_swing/: __init__.py  utils.py
eagle_swing/analysis/: core.py  kinematics.py  lower_body.py  normalization.py  temporal.py  upper_body.py
eagle_swing/data/: loader.py  schema.py
eagle_swing/detection/: backswing.py  config.py  contact.py  events.py  refine.py
eagle_swing/hand_finder/: config.py  detect.py  predict.py
eagle_swing/pipeline/: ingest.py  label.py  lambda_handlers.py
eagle_swing/viz/: plot.py
scripts/: generate_refinement_data.py  run_analysis.py  run_detection.py  run_local_label.py
tests/: conftest.py  test_analysis.py  test_data.py  test_detection.py  test_hand_finder.py
