[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eagle-swing"
version = "0.1.0"
description = "Unified golf swing analysis: biomechanics, detection, and pipeline"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
pipeline = [
    "torch>=2.0",
    "torchvision>=0.15",
    "boto3>=1.28",
    "mmcv>=2.0",
    "mediapipe>=0.10",
]
dev = [
    "pytest>=7.0",
    "moto[s3,sqs,dynamodb]>=4.0",
]

[tool.setuptools.packages.find]
include = ["eagle_swing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
